--- a/Self_Driving_Car_JS/style.css
+++ b/Self_Driving_Car_JS/style.css
@@ -4,7 +4,9 @@ body{
      overflow: hidden;
      text-align: center;
 }
-
-#myCanvas{
+#networkCanvas{
+    background: black;
+}
+#carCanvas{
     background: lightgrey;
 }
